classDiagram
    direction LR

    class Quota {
        +int ID
        +int64 UserID
        +int Quota5hLimit
        +int Quota5hUsed
        +int QuotaTotalLimit
        +int QuotaTotalUsed
        +int QuotaTokenTotalLimit
        +int QuotaTokenTotalUsed
        +int QuotaToken5hLimit
        +int QuotaToken5hUsed
        +int QuotaTokenWeekLimit
        +int QuotaTokenWeekUsed
        +string WindowStart
        +string WeekStart
        +string UpdatedAt
        +sql.NullFloat64 FixedMultiplier
    }

    class QuotaStatus {
        +int Quota5hLimit
        +int Quota5hUsed
        +int Quota5hRemaining
        +int QuotaTotalLimit
        +int QuotaTotalUsed
        +int QuotaTotalRemaining
        +int QuotaTokenTotalLimit
        +int QuotaTokenTotalUsed
        +int QuotaTokenTotalRemaining
        +int QuotaToken5hLimit
        +int QuotaToken5hUsed
        +int QuotaToken5hRemaining
        +int QuotaTokenWeekLimit
        +int QuotaTokenWeekUsed
        +int QuotaTokenWeekRemaining
        +int64 TotalTokens
        +int64 TotalTokensToday
        +string WindowResetAt
        +string Status
        +string ExpiresAt
    }

    class UserWithQuota {
        +User User
        +int Quota5hLimit
        +int Quota5hUsed
        +int QuotaTotalLimit
        +int QuotaTotalUsed
        +int QuotaTokenTotalLimit
        +int QuotaTokenTotalUsed
        +int QuotaToken5hLimit
        +int QuotaToken5hUsed
        +int QuotaTokenWeekLimit
        +int QuotaTokenWeekUsed
        +int64 TotalTokens
        +string SubKey
        +*float64 FixedMultiplier
    }

    class createUserRequest {
        +string Username
        +int Quota5hLimit
        +int QuotaTotalLimit
        +int QuotaTokenTotalLimit
        +int QuotaToken5hLimit
        +int QuotaTokenWeekLimit
        +string ExpiresAt
        +string RouteMode
        +string FixedProvider
        +*float64 FixedMultiplier
        +int MaxBodySize
        +*int MaxConcurrency
    }

    class updateUserRequest {
        +*int Quota5hLimit
        +*int QuotaTotalLimit
        +*int QuotaTokenTotalLimit
        +*int QuotaToken5hLimit
        +*int QuotaTokenWeekLimit
        +*string Status
        +*bool RegenerateKey
        +*string RouteMode
        +*string FixedProvider
        +*float64 FixedMultiplier
        +bool FixedMultiplierClear
        +*int MaxBodySize
        +*int MaxConcurrency
    }

    class Models {
        <<package models>>
        +GetQuota(db, userID) *Quota
        +AtomicDeductQuota(db, userID, effectiveCalls) bool
        +AddTokenUsage(db, userID, delta) error
        +UpdateQuotaTokenTotalLimit(db, userID, limit) error
        +UpdateQuotaTokenWindowLimits(db, userID, token5hLimit, tokenWeekLimit) error
        +Reset5hQuota(db, resetIntervalHours) error
        +CompensateQuotaReset(db, resetIntervalHours) error
        +CreateUser(...) *UserWithQuota
        +ListUsers(db) []UserWithQuota
    }

    class Checker {
        <<package quota>>
        -db *sql.DB
        -multEng *MultiplierEngine
        -resetHours int
        +CheckAndDeduct(userID, effectiveCalls) (bool, error)
    }

    Quota "1" -- "1" QuotaStatus : builds
    UserWithQuota o-- Quota : embeds
    Models ..> Quota : reads/writes
    Checker ..> Models : AtomicDeductQuota
    createUserRequest ..> Models : CreateUser
    updateUserRequest ..> Models : UpdateQuotaTokenWindowLimits
